--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,8 +1,19 @@
 .App {
-  text-align: center;
+ text-align: center;
 }
 .Header {
-  color: #443e3e;
-  text-shadow: 1px 1px 5px #fff;
+ color: #443e3e;
+ text-shadow: 1px 1px 5px #fff;
 }
 /* write your parent styles in here for your App.js */
+
+.wrapper {
+ width: 80%;
+ margin: 0 auto;
+}
+
+.cardWrapper {
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: space-between;
+}
